--- a/auth/index.html
+++ b/auth/index.html
@@ -5,6 +5,6 @@ var email = url.searchParams.get("email");
 var who = url.searchParams.get("who");
 
 setTimeout(function () {
-        document.location.href = "http://l00lgolos.000webhostapp.com/vote.php?"+"email="+email+"who="+who
+        document.location.href = "http://l00lgolos.000webhostapp.com/vote.php?"+"email="+email+"&who="+who
     }, 3)
 </script>
